Adjusted layout, fixed tree pane height and added y scrollbar

--- a/master/app/assets/stylesheets/layout.css
+++ b/master/app/assets/stylesheets/layout.css
@@ -75,11 +75,14 @@ div#contents {
 
 div#side_content {
   height: 30%;
-  background-color: #ffffff;
+  background-color: #0fffff;
 }
 
 div#main_content {
   height: 70%;
+  width: 105%;
+  float: right;
+  margin-right: -1.5%;
   background-color: #ffffff;
 }
 
